fixed mantis bug #415